@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Sun, 13 Oct 2024 17:19:18 +0800</lastBuildDate>
+  <lastBuildDate>Sun, 13 Oct 2024 17:20:23 +0800</lastBuildDate>
 <item>
   <title>KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</title>
   <link>https://www.famechos.me/news/KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單.html</link>
@@ -212,5 +212,11 @@ YG娛樂旗下的新人女團BABYMONSTER（韓語：베이비몬스터）將於1
   <description>韓美著名作家李敏金恭賀韓江獲得諾貝爾文學獎。韓美著名作家李敏金於週四恭賀韓國作家韓江獲得諾貝爾文學獎，認為韓江理應獲得「這項全球認可」。...</description>
   <category>K-Pop</category>
   <pubDate>Sun, 13 Oct 2024 17:19:18 +0800</pubDate>
+</item><item>
+  <title>RIIZE勝韓重返團隊引發粉絲抗議！元斌親自出面懇求粉絲支持</title>
+  <link>https://www.famechos.me/news/RIIZE勝韓重返團隊引發粉絲抗議！元斌親自出面懇求粉絲支持.html</link>
+  <description>RIIZE成員元斌請求粉絲支持和理解有關成員勝韓重返團隊。...</description>
+  <category>K-Pop</category>
+  <pubDate>Sun, 13 Oct 2024 17:20:23 +0800</pubDate>
 </item></channel>
 </rss>
