@@ -1,0 +1,264 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "RIIZE\u52dd\u97d3\u91cd\u8fd4\u5718\u968a\u5f15\u767c\u7c89\u7d72\u6297\u8b70\uff01\u5143\u658c\u89aa\u81ea\u51fa\u9762\u61c7\u6c42\u7c89\u7d72\u652f\u6301", "description": "RIIZE\u52dd\u97d3\u91cd\u8fd4\u5718\u968a\u5f15\u767c\u7c89\u7d72\u6297\u8b70\uff01\u5143\u658c\u89aa\u81ea\u51fa\u9762\u61c7\u6c42\u7c89\u7d72\u652f\u6301", "url": "https://www.famechos.me/news/RIIZE\u52dd\u97d3\u91cd\u8fd4\u5718\u968a\u5f15\u767c\u7c89\u7d72\u6297\u8b70\uff01\u5143\u658c\u89aa\u81ea\u51fa\u9762\u61c7\u6c42\u7c89\u7d72\u652f\u6301.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-13T17:20:16.701010+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/RIIZE勝韓重返團隊引發粉絲抗議！元斌親自出面懇求粉絲支持.html"/>
+<meta name="description" content="RIIZE勝韓重返團隊引發粉絲抗議！元斌親自出面懇求粉絲支持，最新消息震驚粉絲，團隊內部究竟發生了什麼事？">
+<meta name="keywords" content="RIIZE勝韓, 重返團隊, 粉絲抗議, 元斌, KPOP, 韓國娛樂圈, 團隊風波">
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/RIIZE勝韓重返團隊引發粉絲抗議！元斌親自出面懇求粉絲支持.html" />
+        <meta property="og:title" content="RIIZE勝韓重返團隊引發粉絲抗議！元斌親自出面懇求粉絲支持" />
+        <meta property="og:description" content="RIIZE勝韓重返團隊引發粉絲抗議！元斌親自出面懇求粉絲支持" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="RIIZE勝韓重返團隊引發粉絲抗議！元斌親自出面懇求粉絲支持" />
+        <meta property="twitter:description" content="RIIZE勝韓重返團隊引發粉絲抗議！元斌親自出面懇求粉絲支持" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <a href="https://www.famechos.me/"><img class="famechos-logo" src="../img/famechos_logo.png"></a>
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button></a>
+  
+        </div>
+        <div class="nav-type-2 nav-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button></a>
+  
+        </div>
+        <div class="nav-type-3 nav-type"><a href="https://www.famechos.me/drama.html">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button></a>
+          
+        </div>
+        <div class="nav-type-4 nav-type"><a href="https://www.famechos.me/others.html">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button></a>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer"><a href="https://www.famechos.me/about_us.html">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button></a>
+        </div>
+        <div class="nav-setting"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button></a>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type"><a href="https://www.famechos.me/drama.html">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type"><a href="https://www.famechos.me/others.html">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type"><a href="https://www.famechos.me/about_us.html">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button></a>
+
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>RIIZE勝韓重返團隊引發粉絲抗議！元斌親自出面懇求粉絲支持</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">13/10/2024</p>
+        </div>
+	<p>RIIZE成員元斌於周日在全球粉絲生活平台Weverse上發表文章，請求粉絲支持和理解有關成員勝韓重返團隊。元斌表示，他決定分享自己的想法，以防止粉絲名稱BRIIZE的成員感到困惑。</p>
+<p>我們與勝韓和公司（SM娛樂）進行了多次討論，請理解成員們對這種情況進行了深刻的思考。沒有BRIIZE就沒有RIIZE。</p>
+<h3>勝韓重返團隊</h3>
+<p>5中心（Wizard Production），SM娛樂負責RIIZE的製作團隊，於周五宣布勝韓將於11月開始逐漸參與團隊的活動。勝韓因個人爭議於約10個月前被無限期停職。</p>
+<p>勝韓在周五於Weverse上發表的手寫信中表示：「我一直在思考是否能夠再次登上舞台，讓我感到失望的是，我讓很多人失望了。在那段時間裡，成員們再次聯繫了我，我非常感激這個機會。」</p>
+<h3>粉絲反應</h3>
+<p>然而，一些粉絲似乎並不歡迎勝韓的回歸。粉絲們向SM娛樂的總部送去了葬禮花圈，附有「洪勝韓出去」、「刪除洪勝韓」和「RIIZE永遠是六人」的消息，以抗議勝韓的回歸。</p>
+<p>周日，粉絲們開始了一場卡車抗議。卡車上的電子廣告牌閃耀著：「RIIZE已經達到了里程碑，是一個六人的團體。在大多數粉絲的心中，RIIZE由六人組成，洪勝韓沒有回歸的位置。」</p>
+<h3>RIIZE簡介</h3>
+<p>RIIZE是SM娛樂三年來的第一個新男團，由七名成員組成，包括安東、Shotaro、恩碩、成燦、元斌、勝韓和昭熙。該團的首張實體單曲《Get A Guitar》於去年9月發行，銷量超過100萬張，獲得了相當大的流行度。</p>
+<p>然而，在團體出道前，勝韓的個人照片在網上流傳，引起了爭議。SM娛樂於去年11月停職勝韓的活動，當時更多勝韓未成年吸菸的照片被洩露，引起了進一步的反彈。</p>
+
+<p>資料來源：Korea Herald</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/lbMEEA49Wys" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+      
+      <div class ="related-news-box">
+        
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/韓國作家韓江獲諾貝爾文學獎！首位亞洲女性得主感謝之聲.html">韓國作家韓江獲諾貝爾文學獎！首位亞洲女性得主感謝之聲</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/韓國文學史上里程碑！韓江奪得諾貝爾文學獎，首位亞洲女性得主.html">韓國文學史上里程碑！韓江奪得諾貝爾文學獎，首位亞洲女性得主</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/韓國文學全球崛起！諾貝爾獎後再下一城，韓國作家連續三年入圍布克獎.html">韓國文學全球崛起！諾貝爾獎後再下一城，韓國作家連續三年入圍布克獎</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <a href="https://www.famechos.me/"><img class="famechos-logo-footer" src="../img/famechos_logo.png"></a>
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <a href="https://www.famechos.me/k-pop.html"><p class="footer-text">K-POP</p></a>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <a href="https://www.famechos.me/j-pop.html"><p class="footer-text">J-POP</p></a>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <a href="https://www.famechos.me/drama.html"><p class="footer-text">影視</p></a>
+        </div>
+        <div class="other-footer-box footer-box">
+          <a href="https://www.famechos.me/others.html"><p class="footer-text">其他</p></a>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
