@@ -248,4 +248,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/RIIZE勝韓重返團隊引發粉絲抗議！元斌親自出面懇求粉絲支持.html</ns0:loc>
+    <ns0:lastmod>2024-10-13T17:20:23+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
